// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListForm when the list already exist should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="modal"
    data-testid="modal"
  >
    <div
      class="modal-background"
    />
    <div
      class="modal-content"
    >
      <div
        class="box"
      >
        <div
          class="content"
        >
          <form
            action="#"
          >
            <div
              class="field"
            >
              <label
                class="label"
                for="title"
              >
                Title
              </label>
              <div
                class="control"
              >
                <input
                  class="input"
                  data-testid="title"
                  name="title"
                  value=""
                />
              </div>
              <p
                class="help is-danger"
                data-testid="titleErrors"
              />
            </div>
            <div
              class="field"
            >
              <label
                class="label"
                for="description"
              >
                Description
              </label>
              <div
                class="control"
              >
                <textarea
                  class="textarea"
                  data-testid="description"
                  name="description"
                />
              </div>
              <p
                class="help is-danger"
                data-testid="descriptionErrors"
              />
            </div>
          </form>
        </div>
        <div
          class="field is-grouped is-justify-content-center"
        >
          <div
            class="control"
          >
            <button
              class="button"
              data-testid="modalOk"
            >
              OK
            </button>
          </div>
          <div
            class="control"
          >
            <button
              class="button"
              data-testid="modalCancel"
            >
              CANCEL
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="close"
      class="modal-close is-large"
      data-testid="modalClose"
    />
  </div>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="name"
          name="name"
          value="list name"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <div>
      <div
        class="is-flex"
      >
        <div
          class="is-flex-grow-4"
        >
          <span
            class="label"
          >
            List Items
          </span>
        </div>
      </div>
      <div
        class="dnd-container"
      >
        <div
          class="list-button mt-2 mb-2"
        >
          <button
            class="button is-small"
            data-testid="addNew"
            type="button"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-plus"
              />
            </span>
            <span>
              Add
            </span>
          </button>
        </div>
        <div
          class="dnd-list"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="2"
        >
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class="is-flex dnd-item p-2 mb-2"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="5"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="5"
            data-testid="draggable5"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="is-flex-grow-4"
              data-testid="editListItem5"
            >
              <span
                class="has-text-black"
              >
                item 5 title
              </span>
            </div>
            <div
              class="is-justify-content-flex-end"
            >
              <center>
                <span
                  class="icon has-text-grey-light is-clickable"
                >
                  <i
                    class="fas fa-dolly"
                  />
                </span>
                <button
                  class="has-text-black delete ml-2"
                  data-testid="deleteListItem5"
                  type="button"
                />
              </center>
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class="is-flex dnd-item p-2 mb-2"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="6"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="6"
            data-testid="draggable6"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="is-flex-grow-4"
              data-testid="editListItem6"
            >
              <span
                class="has-text-black"
              >
                item 6 title
              </span>
            </div>
            <div
              class="is-justify-content-flex-end"
            >
              <center>
                <span
                  class="icon has-text-grey-light is-clickable"
                >
                  <i
                    class="fas fa-dolly"
                  />
                </span>
                <button
                  class="has-text-black delete ml-2"
                  data-testid="deleteListItem6"
                  type="button"
                />
              </center>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          SAVE
        </button>
      </div>
      <div
        class="control ml-auto is-pulled-right"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ListForm when the list is new should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="modal"
    data-testid="modal"
  >
    <div
      class="modal-background"
    />
    <div
      class="modal-content"
    >
      <div
        class="box"
      >
        <div
          class="content"
        >
          <form
            action="#"
          >
            <div
              class="field"
            >
              <label
                class="label"
                for="title"
              >
                Title
              </label>
              <div
                class="control"
              >
                <input
                  class="input"
                  data-testid="title"
                  name="title"
                  value=""
                />
              </div>
              <p
                class="help is-danger"
                data-testid="titleErrors"
              />
            </div>
            <div
              class="field"
            >
              <label
                class="label"
                for="description"
              >
                Description
              </label>
              <div
                class="control"
              >
                <textarea
                  class="textarea"
                  data-testid="description"
                  name="description"
                />
              </div>
              <p
                class="help is-danger"
                data-testid="descriptionErrors"
              />
            </div>
          </form>
        </div>
        <div
          class="field is-grouped is-justify-content-center"
        >
          <div
            class="control"
          >
            <button
              class="button"
              data-testid="modalOk"
            >
              OK
            </button>
          </div>
          <div
            class="control"
          >
            <button
              class="button"
              data-testid="modalCancel"
            >
              CANCEL
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="close"
      class="modal-close is-large"
      data-testid="modalClose"
    />
  </div>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="name"
          name="name"
          value=""
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <div>
      <div
        class="is-flex"
      >
        <div
          class="is-flex-grow-4"
        >
          <span
            class="label"
          >
            List Items
          </span>
        </div>
      </div>
      <div
        class="dnd-container"
      >
        <div
          class="list-button mt-2 mb-2"
        >
          <button
            class="button is-small"
            data-testid="addNew"
            type="button"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-plus"
              />
            </span>
            <span>
              Add
            </span>
          </button>
        </div>
        <div
          class="dnd-list"
          data-rbd-droppable-context-id="3"
          data-rbd-droppable-id="-1"
        />
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          SAVE
        </button>
      </div>
      <div
        class="control ml-auto is-pulled-right"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
